--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="DESCRIPTION GOES HERE" />
         <meta name="author" content="AUTHOR NAME GOES HERE" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
     </head>
     <body>
         <h1>HTML Boilerplate</h1>
